namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kolon-3tier-app
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  labels:
    istio-injection: enabled
