istio-gateway.yaml
# 1. Manual Gateway Pod (Deployment)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-3tier-istio
spec:
  replicas: 1
  selector:
    matchLabels:
      istio: 3tier-gateway
  template:
    metadata:
      annotations:
        inject.istio.io/templates: gateway
      labels:
        istio: 3tier-gateway
    spec:
      containers:
      - name: istio-proxy
        image: harbor.kolon.local/library/proxyv2:1.23.6
---
# 2. LoadBalancer Service
apiVersion: v1
kind: Service
metadata:
  name: gateway-3tier-istio
spec:
  type: LoadBalancer
  selector:
    istio: 3tier-gateway
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
---
# 3. Istio Gateway Rules
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: 3tier-gateway
spec:
  selector:
    istio: 3tier-gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
